Clean up cloud-stats tests per static analysis (JENKINS-55084)
Address the findings a local SonarQube pass surfaced on the branch's
tests, all cosmetic and behaviour-preserving:

- S6204: replace Stream.collect(Collectors.toList()) with Stream.toList()
  in the ec2Agents()/tags/planned-node helpers, dropping the now-unused
  Collectors imports.
- S8924: use static imports for Mockito doThrow/doReturn in the spot test.
- S1068: document why CloudStatsTrackingTest keeps its JenkinsRule field
  (the @BeforeEach injection is what boots Jenkins under @WithJenkins) and
  mark it @SuppressWarnings("unused") rather than deleting it.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>